--- a/build.gradle
+++ b/build.gradle
@@ -143,7 +143,7 @@ dependencies {
 // See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
 tasks.named('processResources', ProcessResources).configure {
     var replaceProperties = [
-            mc_version: mc_version, flib_version: flib_version,
+            mc_version: mc_version,
             loader_version_range: loader_version_range,
             neo_version_range: neo_version_range, neo_version: neo_version, 
             mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
