--- a/gradle.properties
+++ b/gradle.properties
@@ -7,27 +7,18 @@ mod_id=warborn
 # your properties
 curse_slug=_curseslug_
 curse_id=0
-mod_version=0.0.1
+mod_version=1.0.0
 
 neo_version=47.1.106
 
 mod_group_id=com.raiiiden.warborn
 
-mod_license=MIT
+mod_license=Apache License 2.0
 mod_authors=Raiiiden
 mod_name=warborn
-mod_description=warborn
+mod_description=warborn armor mod
 neo_version_range=[47.1,)
 loader_version_range=[47,)
 mapping_channel=official
 minecraft_version=1.20.1
 mc_version=1.20.1
-
-
-flib_version=0.0.14
-flib_file=5495793
-
-patchouli_version=84
-jei_version=15.3.0.4
-curios_version=5.7.2
-crafttweaker_version=14.0.38
