- Initial night vision implementation (N) - Code reorganization for client events and keybinds

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -48,3 +48,9 @@ Warborn by ${mod_authors}
     versionRange="[${mc_version},)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.warborn]]
+    modId="geckolib"
+    mandatory=true
+    versionRange="[4.0.0,)"
+    ordering="NONE"
+    side="BOTH"
