- Attempt 1 at TaCZ Support for vest slots

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,9 @@ mod_id=warborn
 # your properties
 curse_slug=_curseslug_
 curse_id=0
-mod_version=2.3.2
+mod_version=2.3.3
+
+mixin_version=0.8.5
 
 neo_version=47.1.106
 
