--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,7 @@ mod_name=warborn
 mod_description=Warborn Armor Mod
 neo_version_range=[47.1,)
 loader_version_range=[47,)
-mapping_channel=official
+mapping_channel=parchment
+mapping_version=2023.09.03-1.20.1
 minecraft_version=1.20.1
 mc_version=1.20.1
