--- a/build.gradle
+++ b/build.gradle
@@ -135,11 +135,21 @@ repositories {
   }
   maven { url = 'https://maven.blamejared.com' }
   maven { url = 'https://www.cursemaven.com'  }
+
+maven {
+    name = 'GeckoLib'
+    url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
+    content {
+        includeGroupByRegex("software\\.bernie.*")
+        includeGroup("com.eliotlash.mclib")
+    }
+}
 }
 
 dependencies {
     minecraft "net.neoforged:forge:${mc_version}-${neo_version}"
-    implementation fg.deobf("curse.maven:geckolib-388172:6027567")
+    implementation fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
+    implementation("com.eliotlash.mclib:mclib:20")
     implementation fg.deobf("curse.maven:curios-309927:6238756")
     compileOnly fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6069384")
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
