--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,4 @@ mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
 minecraft_version=1.20.1
 mc_version=1.20.1
+geckolib_version=4.7.1.2
