--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ mod_id=warborn
 # your properties
 curse_slug=_curseslug_
 curse_id=0
-mod_version=2.3.4
+mod_version=2.3.4-beta
 
 mixin_version=0.8.5
 
