--- a/build.gradle
+++ b/build.gradle
@@ -151,7 +151,9 @@ dependencies {
     implementation fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
     implementation("com.eliotlash.mclib:mclib:20")
     implementation fg.deobf("curse.maven:curios-309927:6238756")
-    //implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6518539")
+//    implementation fg.deobf("curse.maven:parcool-482378:6612358")
+//    implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6518539")
+//    implementation fg.deobf("curse.maven:playeranimator-658587:4587214")
     compileOnly fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6518539")
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
     compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
