--- a/build.gradle
+++ b/build.gradle
@@ -123,6 +123,7 @@ mixin {
 }
 
 repositories {
+    maven { url = 'https://maven.minecraftforge.net' }
   flatDir { dir 'libs' }
   maven {
     // location of the maven that hosts JEI files
@@ -152,9 +153,11 @@ dependencies {
     implementation("com.eliotlash.mclib:mclib:20")
     implementation fg.deobf("curse.maven:curios-309927:6238756")
 //    implementation fg.deobf("curse.maven:parcool-482378:6612358")
-//    implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6518539")
-//    implementation fg.deobf("curse.maven:playeranimator-658587:4587214")
-    compileOnly fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6518539")
+    implementation fg.deobf("curse.maven:playeranimator-658587:4587214")
+    implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6654541")
+//    implementation fg.deobf("curse.maven:superb-warfare-1218165:6702058")
+
+    compileOnly fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6654541")
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
     compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
     implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.4.1")) {
