--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ mod_id=warborn
 # your properties
 curse_slug=_curseslug_
 curse_id=0
-mod_version=2.3.5-beta
+mod_version=2.3.6-beta
 
 mixin_version=0.8.5
 
@@ -15,7 +15,7 @@ neo_version=47.1.106
 
 mod_group_id=com.raiiiden.warborn
 
-mod_license=Apache License 2.0
+mod_license=ARR
 mod_authors=Raiiiden
 mod_name=warborn
 mod_description=Warborn Armor Mod
