--- a/build.gradle
+++ b/build.gradle
@@ -152,12 +152,16 @@ dependencies {
     implementation fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
     implementation("com.eliotlash.mclib:mclib:20")
     implementation fg.deobf("curse.maven:curios-309927:6238756")
+//    implementation fg.deobf("curse.maven:embeddium-908741:5681725")
+//    implementation fg.deobf("curse.maven:oculus-581495:6020952")
 //    implementation fg.deobf("curse.maven:parcool-482378:6612358")
-    implementation fg.deobf("curse.maven:playeranimator-658587:4587214")
-    implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6654541")
+//    implementation fg.deobf("curse.maven:playeranimator-658587:4587214")
+//    implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6654541")
 //    implementation fg.deobf("curse.maven:superb-warfare-1218165:6702058")
 
     compileOnly fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6654541")
+    compileOnly fg.deobf("curse.maven:auto-hud-623806:6721667")
+
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
     compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
     implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.4.1")) {
