- Fixed mixin crash when loading cause of refmap - Fixed NVG not looking at right location and using wrong modid

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ mod_id=fracturepoint
 # your properties
 curse_slug=_curseslug_
 curse_id=0
-mod_version=2.3.9-beta
+mod_version=2.3.9-beta-hotfix1
 
 mixin_version=0.8.5
 
